# pdf-extractor-agent

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  GraphModel.py  PdfExtractor.py  PydanticSchema.py  README.md  app.py  hello.py  main.py  makefile  pdf_extractor_graph.ipynb  pyproject.toml  test_extractor_agent.py  testting_pdf_extractor_graph.ipynb  tools.py
app/: PdfExtractor.py  __init__.py
src/: BigQueryLoader.py  GraphModel.py  LlmModel.py  PydanticSchema.py  __init__.py
