[project]
name = "pdf-extractor-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-bigquery>=3.27.0",
    "jupyterlab>=4.3.4",
    "langchain-anthropic>=0.3.3",
    "langchain-community>=0.3.14",
    "langgraph>=0.2.64",
    "pydantic>=2.10.5",
    "streamlit>=1.41.1",
]
